# nextjob

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  python_notes.md
.github/workflows/: pylint.yml  test.yml
src/backend/: data_service.py  datautils.py  htmlextractor.py  models.py
src/gui/: basetreemodel.py  companywindow.py  desctextedit.py  guiutils.py  icons.qrc  iconsrc.py  interviewwindow.py  main.py  mainwindow.py  personstablemodel.py  personwindow.py  rolewindow.py  treeitem.py  treemodel.py
src/gui/images/: nextjob.icns
tests/: test_data_service.py  test_datautils.py  test_gui.py  test_htmlextractor.py  test_models.py
