[project]
name = "nextjob"
version = "0.4.0"
authors = [
    { name = "Shahram Ensan", email = "shahram@ensan.net" },
]
description = "GUI application for tracking the interview process for the next job."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools>=75.1.0",
    "pyside6>=6.7.2",
    "tinydb>=4.8.0",
    "pydantic>=2.9.2",
    "pytest>=8.3.2",
    "pytest-qt>=4.4.0",
    "markdown>=3.7"
]

[project.urls]
Homepage = "https://github.com/mrensan/nextjob"
Issues = "https://github.com/mrensan/nextjob/issues"

[project.scripts]
nextjob = "gui.main:main"

[tool.setuptools]
packages = ["backend", "gui"]
package-dir = { "" = "src" }
